--- a/playbook-import.yml
+++ b/playbook-import.yml
@@ -27,7 +27,7 @@
         # geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=52411&params=0.150000-0.005000-0.005000 # Belgium
         poly_url: http://polygons.openstreetmap.fr/get_poly.py?id=58258&params=0 # Jette
         geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=58258&params=0 # Jette
-        tile_dir: /var/lib/mod_tile
+        tile_dir: /var/cache/renderd/tiles
         style: osmbe
 
 # - name: Delete instance
