--- a/roles/import/templates/renderd.conf
+++ b/roles/import/templates/renderd.conf
@@ -16,7 +16,7 @@ XML=/tmp/style/openstreetmap-carto/mapnik.xml
 HOST=localhost
 TILESIZE=256
 MAXZOOM=18
-CORS=*
+;CORS=*
 
 [osmbe-fr]
 URI=/osmbe-fr/
@@ -25,7 +25,7 @@ XML=/tmp/style/openstreetmap-carto/mapnik-fr.xml
 HOST=localhost
 TILESIZE=256
 MAXZOOM=18
-CORS=*
+;CORS=*
 
 [osmbe-nl]
 URI=/osmbe-nl/
@@ -34,4 +34,4 @@ XML=/tmp/style/openstreetmap-carto/mapnik-nl.xml
 HOST=localhost
 TILESIZE=256
 MAXZOOM=18
-CORS=*
+;CORS=*
