--- a/roles/import/files/renderd.service
+++ b/roles/import/files/renderd.service
@@ -6,10 +6,8 @@ After=network.target auditd.service
 User=gis
 Group=gis
 Type=simple
-RuntimeDirectory=./renderd
-RuntimeDirectoryMode=0755
 Restart=always
-ExecStart=/usr/local/bin/renderd --foreground -c /etc/renderd.conf
+ExecStart=/usr/local/bin/renderd --foreground --config=/etc/renderd.conf
 
 [Install]
 WantedBy=multi-user.target
