Add `num_threads` option

--- a/roles/import/tasks/process/render.yml
+++ b/roles/import/tasks/process/render.yml
@@ -10,10 +10,10 @@
     group: gis
 
 - name: "Generate tiles (levels: 0-7) : World"
-  shell: "render_list -m {{ style }} -t {{ tile_dir }} -n 8 -z 0 -Z 7 --all"
+  shell: "render_list --map={{ style }} --tile-dir {{ tile_dir }} --num-threads={{ num_threads }} --min-zoom=0 --max-zoom=7 --all"
 
 - name: "Generate tiles list"
   shell: /tmp/make_render_list.py > /tmp/tiles.lst
 
 - name: "Generate tiles (levels: 7-18)"
-  shell: "cat /tmp/tiles.lst | render_list -m {{ style }} -t {{ tile_dir }} -n 8 -z 8 -Z 18 --all"
+  shell: "cat /tmp/tiles.lst | render_list --map={{ style }} --tile-dir {{ tile_dir }} --num-threads={{ num_threads }} --min-zoom=8 --max-zoom=18 --all"
