--- a/playbook-import.yml
+++ b/playbook-import.yml
@@ -30,6 +30,7 @@
         geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=58258&params=0 # Jette
         tile_dir: /var/cache/renderd/tiles
         style: osmbe
+        num_threads: 8
 
 # - name: Delete instance
 #   import_playbook: 999-delete-instance.yml
