--- a/roles/import/templates/renderd.conf
+++ b/roles/import/templates/renderd.conf
@@ -1,5 +1,5 @@
 [renderd]
-num_threads=8
+num_threads={{ num_threads }}
 tile_dir={{ tile_dir }}
 stats_file=/var/run/renderd/renderd.stats
 socketname=/var/run/renderd/renderd.sock
