--- a/roles/import/tasks/process/render.yml
+++ b/roles/import/tasks/process/render.yml
@@ -1,14 +1,15 @@
-- name: Start renderd
-  shell: renderd --config=/etc/renderd.conf
-  become: yes
-  become_user: gis
-
-- file:
+- name: "Create \"{{ tile_dir }}\" directory"
+  file:
     path: "{{ tile_dir }}"
     state: directory
     mode: 0775
     owner: gis
     group: gis
+
+- name: Start renderd
+  shell: renderd --config=/etc/renderd.conf
+  become: yes
+  become_user: gis
 
 - name: "Generate tiles (levels: 0-7) : World"
   shell: "render_list --map={{ style }} --tile-dir {{ tile_dir }} --num-threads={{ num_threads }} --min-zoom=0 --max-zoom=7 --all"
