--- a/playbook-import.yml
+++ b/playbook-import.yml
@@ -11,7 +11,7 @@
     key_name: dev_geo6_be
     # the flavor name
     # list with `openstack flavor list`
-    flavor_name: "s1-8"
+    flavor_name: "c2-30"
     # the image name
     # list with `openstack image list`
     image_name: "Debian 10"
@@ -23,13 +23,14 @@
   roles:
     - role: import
       vars:
-        # poly_url: http://polygons.openstreetmap.fr/get_poly.py?id=52411&params=0.150000-0.005000-0.005000 # Belgium
-        # geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=52411&params=0.150000-0.005000-0.005000 # Belgium
-        osm_url: https://download.geofabrik.de/europe/belgium-latest.osm.pbf
-        poly_url: http://polygons.openstreetmap.fr/get_poly.py?id=58258&params=0 # Jette
-        geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=58258&params=0 # Jette
+        osm_url: https://download.geofabrik.de/europe-latest.osm.pbf
+        poly_url: http://polygons.openstreetmap.fr/get_poly.py?id=52411&params=0.150000-0.005000-0.005000 # Belgium
+        geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=52411&params=0.150000-0.005000-0.005000 # Belgium
+        # poly_url: http://polygons.openstreetmap.fr/get_poly.py?id=58258&params=0 # Jette
+        # geojson_url: http://polygons.openstreetmap.fr/get_geojson.py?id=58258&params=0 # Jette
         tile_dir: /var/cache/renderd/tiles
         style: osmbe
+        num_threads: 8
 
 - name: Sync OSMBE tiles
   import_playbook: 800-sync-tiles.yml
