--- a/playbook-import.yml
+++ b/playbook-import.yml
@@ -38,6 +38,7 @@
     target: tile.openstreetmap.be
     instance_name: osm-import
     style: osmbe
+    tile_dir: /var/cache/renderd/tiles
 
 # - name: Delete instance
 #   import_playbook: 999-delete-instance.yml
