--- a/roles/import/tasks/main.yml
+++ b/roles/import/tasks/main.yml
@@ -22,8 +22,5 @@
 - name: Setup PostgreSQL
   include_tasks: postgresql.yml
 
-- name: Setup Apache
-  include_tasks: apache.yml
-
-- name: Run process
+- name: Run import process
   include_tasks: process.yml
